# ml4rg2025

./: .gitignore  LICENSE  README.md  pyproject.toml  run.ipynb
analysis/: max_positions_analysis.ipynb  run_test.ipynb
data/: samples.json
data/processed/: summary.csv
models/: linear_full_model.pth
models/baseline/: fold_0.pth  fold_3.pth  fold_4.pth
models/baseline/max/: fold_1.pth  fold_2.pth
models/baseline/mean/: fold_0.pth  fold_1.pth  fold_2.pth  fold_3.pth  fold_4.pth
notebooks/: RNA_prediction.ipynb  paralog_analysis.ipynb  paralog_description.ipynb  run.ipynb  weights.ipynb
src/: RNA_prediction.ipynb  Untitled.ipynb  __init__.py  data.py  genome.py  main.py  models.py  preprocess.ipynb  snippets.fasta  utils.py
src/data/: abstract_data_module.py  chromosome_data_module.py  datamodule.py  dataset.py  paralog_data_module.py  preprocess.py
src/data/modules/: _abstract.py  chromosome.py  paralog.py  random.py
src/models/: baseline.py
src/utils/: expression.py  genome.py  io.py  paralogs.py  plotting.py  query.py
tests/: test_datamodule.py
