[project]
name = "ml4rg2025"
version = "0.1.0"
description = "Predicting multiple RNA profiles at once on Saccharomyces cerevisiae"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "biopython>=1.85",
    "datasets>=3.6.0",
    "numpy>=1.24.0",
    "pandas>=2.3.0",
    "torch>=2.7.1",
    "transformers>=4.52.4",
    "tqdm>=4.64.0",
    "pyfaidx>=0.8.1.4",
    "lightning>=2.0.0",
    "hydra-core>=1.3.0",
    "scikit-learn>=1.7.0",
    "h5py>=3.14.0",
    "pybiomart>=0.2.0",
]

[tool.uv]
dev-dependencies = [
    "hatchling>=1.27.0",
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
src = ["src"]
line-length = 90
target-version = "py312"

[tool.ruff.lint]
