[project]
name = "ml4rg2025"
version = "0.1.0"
description = "Predicting multiple RNA profiles at once on Saccharomyces cerevisiae"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "biopython>=1.85",
    "datasets>=3.6.0",
    "numpy>=1.24.0",
    "pandas>=2.3.0",
    "torch>=2.7.1",
    "transformers>=4.52.4",
    "hydra-core>=1.3.0",
    "scikit-learn>=1.7.0",
    "h5py>=3.14.0",
    "pybiomart>=0.2.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.3",
    "pytorch-lightning>=2.5.1.post0",
    "scikit-learn>=1.7.0",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
    "wandb>=0.20.1",
    "lightning>=2.5.2",
]

[tool.uv]
dev-dependencies = [
    "hatchling>=1.27.0",
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
src = ["src"]
line-length = 90
target-version = "py312"
